# Handy3DScanner

./: .clang-format  .gitignore  CMakeLists.txt  README.md  android.cmake  common.cmake  libs.cmake  pcl.cmake  plugins.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
android/: AndroidManifest.xml  build.gradle
android/res/xml/: device_filter.xml
android/src/io/stateoftheart/handy3dscanner/: Handy3DScannerActivity.java
cmake/modules/: FindClangFormat.cmake  clang-format.cmake
cmake/scripts/: clang-format-check-changed.py
include/: PluginInterface.h  PointCloudData.h
include/VideoSource/: VideoSourceStream.h
include/plugins/: PointCloudSourceInterface.h  VideoSourceInterface.h
lib/: arcore.cmake  draco.cmake  librealsense.cmake  librealsense.patch  pcl-boost.cmake  pcl-boost.patch  pcl-eigen.cmake  pcl-flann.cmake  pcl-flann.patch  pcl-lz4.cmake  pcl-lz4.patch  pcl-pcl.cmake  pcl-pcl.patch  pcl.cmake
lib/pcl/: lzf.cpp  lzf.h
libs/realsense/: CMakeLists.txt  config.cmake
platform/: CMakeLists.txt  android.cmake
platform/android/: AndroidManifest.xml  build.gradle
platform/android/res/xml/: device_filter.xml
platform/android/src/io/stateoftheart/handy3dscanner/: Handy3DScannerActivity.java
platform/src/: android_jni.cpp  androidwrapper.h  androidwrapperexception.h  application.h  main.cpp  plugins.cpp  plugins.h  scenefile.cpp  settings.cpp  settings.h  videoplayer.cpp  videoplayer.h
platform/src/camera/: cameraposition.cpp  cameraposition.h  depthcamera.cpp  depthcamera.h  pointcloud.cpp
platform/src/qml/: Capture.qml  Edit.qml  EditMenu.qml  EditMenuButton.qml  MiniAxis.qml  MiniAxisScene.qml  Notification.qml  PointCloudView.qml  Settings.qml  main.qml
platform/src/qml/Settings/: BooleanItem.qml  FloatRangeItem.qml  IntegerRangeItem.qml
platform/src/qml/js/: common.js
platform/src/qml/js/tool/: cameraViewPoint.js  deletePoints.js
platform/src/qml/shaders/es3/: pointcloud.vert
platform/src/settings/: definitions.json
platform/src/settings/type/: float_range.jss  integer_range.jss
plugins/: android.cmake  common.cmake  libs.cmake  package.cmake
plugins/arcore/tmp/: arcoreworker.h
plugins/gltf2/src/: constants.h  exporter.h
plugins/realsense/: CMakeLists.txt
plugins/realsense/android-build/: AndroidManifest.xml  build.gradle
plugins/realsense/android-build/res/xml/: device_filter.xml
plugins/realsense/android-build/src/io/stateoftheart/handy3dscanner/plugins/: RealSensePlugin.java
plugins/realsense/libs/realsense/: CMakeLists.txt  config.cmake
plugins/realsense/src/: VideoSourceStreamObject.cpp  VideoSourceStreamObject.h  plugin.cpp  plugin.h  rsdevice.cpp  rsdevice.h  rsdeviceworker.cpp  rsdeviceworker.h  rsmanager.cpp  rsmanager.h
plugins/realsense/tmp/: rscamera.cpp  rscamera.h  rsworker.cpp  rsworker.h
src/: android_jni.cpp  androidwrapper.cpp  androidwrapper.h  app.qrc  application.cpp  linuxwrapper.cpp  linuxwrapper.h  main.cpp  scenefile.cpp  scenefile.h  settings.cpp  settings.h
src/camera/: cameraposition.cpp  cameraposition.h  pointcloud.cpp  pointcloud.h  pointcloudexception.h
src/gltf2/: exporter.cpp  sceneentityparser.cpp  sceneentityparser.h
src/provider/arcore/: arcore.cpp  arcore.h  arcoreworker.cpp
src/provider/realsense/: rscamera.cpp  rscamera.h  rsmanager.cpp  rsmanager.h
src/qml/: ColorCamera.qml  Edit.qml  EditMenu.qml  MiniAxisScene.qml  PointCloudView.qml  main.qml
src/qml/Settings/: ChoiceItem.qml  TreeItem.qml
src/qml/js/tool/: selectPoint.js  selectRectangle.js  tool.js
src/qml/shaders/es3/: pointcloud.frag
src/settings/type/: choice.jss
tool/: build-apk.sh  build-docker-android.sh  build-docker-linux.sh
tools/: build-apk.sh
